--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,19 @@ security.basic.enabled=false
 
 # Hibernate
 spring.jpa.properties.hibernate.show_sql=true
+
+server.port=9100
+
+# 登録するEurekaサーバのURL
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# 情報の更新間隔
+eureka.instance.lease-renewal-interval-in-seconds=3
+
+# インスタンスID
+eureka.instance.metadata-map.instanceId=${spring.application.name}:${random.value}
+
+# ホスト名の代わりにIPアドレスを使用
+eureka.instance.prefer-ip-address=true
+
+zuul.routes.french-app-eureka-create=/frenches/new
